update snake game

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
     <head>
         <title>JavaScript Snake Game</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <canvas class="canvas" height="300" width="300" style="background-color: #04ca9f;"></canvas>
+        <div>
+            <h1>JavaScript Snake Game</h1>
+            <canvas class="canvas" height="300" width="300" style="background-color: #000317;"></canvas>
+        </div>
+        <footer>
+            <p>&copy; Shaii</p>
+        </footer>   
     </body>
-    <script type="text/javascript" src="fruit.js"></script>
-    <script type="text/javascript" src="snake.js"></script>
-    <script type="text/javascript" src="draw.js"></script>
+    <script src="fruit.js"></script>
+    <script src="snake.js"></script>
+    <script src="draw.js"></script>
     
 </html>
