update snake game

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
+        <main>
             <h1>JavaScript Snake Game</h1>
             <canvas class="canvas" height="300" width="300" style="background-color: #000317;"></canvas>
-        </div>
+        </main>
+
+        <h2>Score: </h2><span class="score"></span>
+
         <footer>
             <p>&copy; Shaii</p>
         </footer>   
